# sonata-mcp-server

./: .coveragerc  .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  pytest.ini  readme.md
.github/workflows/: tests.yml
docs/: afip_tools.md  afip_tools_status.md  architecture.md  tests.md
scripts/: setup_arch.sh  test_afip_debug.py  test_afip_login.py  test_afip_tools.py  test_js_directly.py
src/: main.py
src/browser/: factory.py  interfaces.py  protocols.py
src/browser/engines/: playwright_engine.py  selenium_engine.py
src/captcha/: __init__.py  chain.py  circuit_breaker.py  interfaces.py  solvers.py
src/config/: logger.py  mcp_logger.py
src/connectors/afip/: __init__.py  connector.py  debug_simple.py  example.py  example_debug.py  interfaces.py
src/connectors/afip/session/: __init__.py  storage.py
src/mcp_server/: server.py
src/mcp_server/tools/: __init__.py  afip_tools.py  afip_tools_simple.py  basic_tools.py  google_search.py  memory_tools.py
src/utils/: get_mem0_client.py
tests/: README.md  conftest.py  test_browser_interface.py
tests/fixtures/: browser_fixtures.py  mock_responses.py
tests/integration/: test_browser_integration.py
tests/integration/connectors/afip/: debug_afip_login.py  test_afip_account_statement.py  test_afip_connector.py  test_afip_fields.py  test_afip_minimal.py  test_afip_selectors.py  test_afip_submit.py
tests/integration/engines/: test_simple_selenium.py
tests/unit/captcha/: test_session_storage.py  test_solvers.py
tests/unit/connectors/afip/: test_captcha_chain.py  test_circuit_breaker.py  test_session_storage.py
tests/unit/engines/: test_browser_interface.py  test_playwright_engine.py  test_selenium_engine.py
tests/unit/factories/: test_factory.py
tests/unit/mcp_server/tools/: test_afip_tools.py  (+2 more)
tests/unit/tools/: test_basic_tools.py  test_google_search.py
