[project]
name = "sonata-mcp-server"
version = "0.1.0"
description = ""
authors = [
    {name = "Pablo Coronel",email = "me@pablitxn.io"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright (>=1.52.0,<2.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "requests (>=2.32.3,<3.0.0)",
    "structlog (>=25.4.0,<26.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "cryptography (>=45.0.3,<46.0.0)",
    "mcp[cli] (>=1.9.3,<2.0.0)",
    "selenium (>=4.33.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"

