[project]
name = "sonata_mcp_server"
version = "0.1.0"
description = ""
authors = [
    {name = "Pablo Coronel",email = "me@pablitxn.io"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "playwright (>=1.52.0,<2.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "requests (>=2.32.3,<3.0.0)",
    "structlog (>=25.4.0,<26.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "cryptography (>=45.0.3,<46.0.0)",
    "mcp[cli] (>=1.9.3,<2.0.0)",
    "selenium (>=4.33.0,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "mem0ai>=0.1.88",
    "vecs (>=0.4.5,<0.5.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
]
